tests/cases/cant_fake_inner_block.stderr
error[E0599]: no function or associated item named `new_mmio` found for struct `UartBank` in the current scope
  --> tests/cases/cant_fake_inner_block.rs:14:10
   |
4  | struct UartBank {
   | --------------- function or associated item `new_mmio` not found for this struct
...
14 | #[derive(derive_mmio::Mmio)]
   |          ^^^^^^^^^^^^^^^^^ function or associated item not found in `UartBank`
   |
   = note: this error originates in the derive macro `derive_mmio::Mmio` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MmioUartBank<'_>: _MmioMarker` is not satisfied
  --> tests/cases/cant_fake_inner_block.rs:20:13
   |
20 |     bank_0: UartBank,
   |             ^^^^^^^^ the trait `_MmioMarker` is not implemented for `MmioUartBank<'_>`
   |
   = help: the trait `_MmioMarker` is implemented for `MmioUart<'_>`
note: required by a bound in `is_mmio`
  --> src/lib.rs
   |
   | pub const fn is_mmio<M: _MmioMarker>() {}
   |                         ^^^^^^^^^^^ required by this bound in `is_mmio`

error[E0277]: the trait bound `MmioUartBank<'_>: _MmioMarker` is not satisfied
  --> tests/cases/cant_fake_inner_block.rs:22:13
   |
22 |     bank_1: UartBank,
   |             ^^^^^^^^ the trait `_MmioMarker` is not implemented for `MmioUartBank<'_>`
   |
   = help: the trait `_MmioMarker` is implemented for `MmioUart<'_>`
note: required by a bound in `is_mmio`
  --> src/lib.rs
   |
   | pub const fn is_mmio<M: _MmioMarker>() {}
   |                         ^^^^^^^^^^^ required by this bound in `is_mmio`
